Refined access and tested

--- a/documentation/ie/wit/service/LoginService.html
+++ b/documentation/ie/wit/service/LoginService.html
@@ -93,7 +93,7 @@
 <li>java.lang.Object</li>
 <li>
 <ul class="inheritance">
-<li>ie.wit.service.LoginService</li>
+<li>ie.wit.service.access.LoginService</li>
 </ul>
 </li>
 </ul>
