--- a/documentation/ie/wit/service/UserService.html
+++ b/documentation/ie/wit/service/UserService.html
@@ -99,7 +99,7 @@ var activeTableTab = "activeTableTab";
 <li>java.lang.Object</li>
 <li>
 <ul class="inheritance">
-<li>ie.wit.service.UserService</li>
+<li>ie.wit.service.access.UserService</li>
 </ul>
 </li>
 </ul>
