Moved exception handling to service package

--- a/documentation/allclasses-frame.html
+++ b/documentation/allclasses-frame.html
@@ -20,7 +20,7 @@
 <li><a href="ie/wit/ThomastownUtdBackend2Application.html" title="class in ie.wit" target="classFrame">ThomastownUtdBackend2Application</a></li>
 <li><a href="ie/wit/ThomastownUtdBackend2ApplicationTests.html" title="class in ie.wit" target="classFrame">ThomastownUtdBackend2ApplicationTests</a></li>
 <li><a href="ie/wit/model/entity/UserEntity.html" title="class in ie.wit.model.entity" target="classFrame">UserEntity</a></li>
-<li><a href="ie/wit/exceptions/UserNotFoundException.html" title="class in ie.wit.exceptions" target="classFrame">UserNotFoundException</a></li>
+<li><a href="ie/wit/exceptions/UserNotFoundException.html" title="class in ie.wit.service.util.exceptions" target="classFrame">UserNotFoundException</a></li>
 <li><a href="ie/wit/repository/UserRepo.html" title="interface in ie.wit.repository" target="classFrame"><span class="interfaceName">UserRepo</span></a></li>
 <li><a href="ie/wit/service/UserService.html" title="class in ie.wit.service" target="classFrame">UserService</a></li>
 </ul>
