--- a/documentation/index-files/index-7.html
+++ b/documentation/index-files/index-7.html
@@ -87,7 +87,7 @@
 <dd>
 <div class="block">This package contains all of the endpoints that will deliver content to the end users.</div>
 </dd>
-<dt><a href="../ie/wit/exceptions/package-summary.html">ie.wit.exceptions</a> - package ie.wit.exceptions</dt>
+<dt><a href="../ie/wit/exceptions/package-summary.html">ie.wit.service.util.exceptions</a> - package ie.wit.service.util.exceptions</dt>
 <dd>
 <div class="block">This package contains the custom exceptions used in the application</div>
 </dd>
