--- a/documentation/overview-frame.html
+++ b/documentation/overview-frame.html
@@ -15,7 +15,7 @@
 <ul title="Packages">
 <li><a href="ie/wit/package-frame.html" target="packageFrame">ie.wit</a></li>
 <li><a href="ie/wit/controller/package-frame.html" target="packageFrame">ie.wit.controller</a></li>
-<li><a href="ie/wit/exceptions/package-frame.html" target="packageFrame">ie.wit.exceptions</a></li>
+<li><a href="ie/wit/exceptions/package-frame.html" target="packageFrame">ie.wit.service.util.exceptions</a></li>
 <li><a href="ie/wit/model/dto/package-frame.html" target="packageFrame">ie.wit.model.dto</a></li>
 <li><a href="ie/wit/model/dto/in/package-frame.html" target="packageFrame">ie.wit.model.dto.in</a></li>
 <li><a href="ie/wit/model/entity/package-frame.html" target="packageFrame">ie.wit.model.entity</a></li>
