--- a/documentation/overview-summary.html
+++ b/documentation/overview-summary.html
@@ -87,7 +87,7 @@
 </td>
 </tr>
 <tr class="altColor">
-<td class="colFirst"><a href="ie/wit/exceptions/package-summary.html">ie.wit.exceptions</a></td>
+<td class="colFirst"><a href="ie/wit/exceptions/package-summary.html">ie.wit.service.util.exceptions</a></td>
 <td class="colLast">
 <div class="block">This package contains the custom exceptions used in the application</div>
 </td>
