--- a/documentation/allclasses-noframe.html
+++ b/documentation/allclasses-noframe.html
@@ -20,7 +20,7 @@
 <li><a href="ie/wit/ThomastownUtdBackend2Application.html" title="class in ie.wit">ThomastownUtdBackend2Application</a></li>
 <li><a href="ie/wit/ThomastownUtdBackend2ApplicationTests.html" title="class in ie.wit">ThomastownUtdBackend2ApplicationTests</a></li>
 <li><a href="ie/wit/model/entity/UserEntity.html" title="class in ie.wit.model.entity">UserEntity</a></li>
-<li><a href="ie/wit/exceptions/UserNotFoundException.html" title="class in ie.wit.exceptions">UserNotFoundException</a></li>
+<li><a href="ie/wit/exceptions/UserNotFoundException.html" title="class in ie.wit.service.util.exceptions">UserNotFoundException</a></li>
 <li><a href="ie/wit/repository/UserRepo.html" title="interface in ie.wit.repository"><span class="interfaceName">UserRepo</span></a></li>
 <li><a href="ie/wit/service/UserService.html" title="class in ie.wit.service">UserService</a></li>
 </ul>
