--- a/documentation/ie/wit/exceptions/UserNotFoundException.html
+++ b/documentation/ie/wit/exceptions/UserNotFoundException.html
@@ -85,7 +85,7 @@
 <!-- ========= END OF TOP NAVBAR ========= -->
 <!-- ======== START OF CLASS DATA ======== -->
 <div class="header">
-<div class="subTitle">ie.wit.exceptions</div>
+<div class="subTitle">ie.wit.service.util.exceptions</div>
 <h2 title="Class UserNotFoundException" class="title">Class UserNotFoundException</h2>
 </div>
 <div class="contentContainer">
@@ -102,7 +102,7 @@
 <li>java.lang.RuntimeException</li>
 <li>
 <ul class="inheritance">
-<li>ie.wit.exceptions.UserNotFoundException</li>
+<li>ie.wit.service.util.exceptions.custom_exceptions.UserNotFoundException</li>
 </ul>
 </li>
 </ul>
