--- a/documentation/overview-tree.html
+++ b/documentation/overview-tree.html
@@ -74,7 +74,7 @@
 <ul class="horizontal">
 <li><a href="ie/wit/package-tree.html">ie.wit</a>, </li>
 <li><a href="ie/wit/controller/package-tree.html">ie.wit.controller</a>, </li>
-<li><a href="ie/wit/exceptions/package-tree.html">ie.wit.exceptions</a>, </li>
+<li><a href="ie/wit/exceptions/package-tree.html">ie.wit.service.util.exceptions</a>, </li>
 <li><a href="ie/wit/model/dto/package-tree.html">ie.wit.model.dto</a>, </li>
 <li><a href="ie/wit/model/dto/in/package-tree.html">ie.wit.model.dto.in</a>, </li>
 <li><a href="ie/wit/model/entity/package-tree.html">ie.wit.model.entity</a>, </li>
@@ -100,7 +100,7 @@
 <ul>
 <li type="circle">java.lang.RuntimeException
 <ul>
-<li type="circle">ie.wit.exceptions.<a href="ie/wit/exceptions/UserNotFoundException.html" title="class in ie.wit.exceptions"><span class="typeNameLink">UserNotFoundException</span></a></li>
+<li type="circle">ie.wit.service.util.exceptions.<a href="ie/wit/exceptions/UserNotFoundException.html" title="class in ie.wit.service.util.exceptions"><span class="typeNameLink">UserNotFoundException</span></a></li>
 </ul>
 </li>
 </ul>
