--- a/documentation/serialized-form.html
+++ b/documentation/serialized-form.html
@@ -74,12 +74,12 @@
 <div class="serializedFormContainer">
 <ul class="blockList">
 <li class="blockList">
-<h2 title="Package">Package&nbsp;ie.wit.exceptions</h2>
+<h2 title="Package">Package&nbsp;ie.wit.service.util.exceptions</h2>
 <ul class="blockList">
 <li class="blockList"><a name="ie.wit.exceptions.UserNotFoundException">
 <!--   -->
 </a>
-<h3>Class <a href="ie/wit/exceptions/UserNotFoundException.html" title="class in ie.wit.exceptions">ie.wit.exceptions.UserNotFoundException</a> extends java.lang.RuntimeException implements Serializable</h3>
+<h3>Class <a href="ie/wit/exceptions/UserNotFoundException.html" title="class in ie.wit.service.util.exceptions">ie.wit.service.util.exceptions.custom_exceptions.UserNotFoundException</a> extends java.lang.RuntimeException implements Serializable</h3>
 </li>
 </ul>
 </li>
